--- a/Actividades/MillenniumDB/Usando_MDB.ipynb
+++ b/Actividades/MillenniumDB/Usando_MDB.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "313e80b5-5c15-484c-9a9b-018fa28ae24c",
    "metadata": {},
    "outputs": [],
@@ -177,6 +177,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "6baa4984-a14a-4f03-9be8-2cef99d1cd8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### esta consulta obtiene todos los textos que han salido embeddings (?object) \n",
+    "#### en participaciones (?part)\n",
+    "#### de parlamentarios (?parlamentario)\n",
+    "#### pertenecientes al Partido Socialista de Chile. \n",
+    "\n",
+    "consulta_grafo = 'MATCH (?object)-[:tieneParticipation]->(?part), (?parlamentario)-[:enParticipacion]->(?part), (?parlamentario)-[:enPartido]->(?partido) WHERE ?partido.nombre == \"Partido Socialista de Chile\" RETURN DISTINCT ?part.texto_principal'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a9c86e4c-b2e6-4e4f-9b9c-fdfeb1ad8bff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Ahora podemos filtrar nuestra búsqueda de vectores para que solo tome en \n",
+    "#### Consideracion nodos que salen de esa consulta (es decir, texto producido \n",
+    "#### Por parlamentarios del Partido Socialista \n",
+    "\n",
+    "query = 'CALL HNSW_TOP_K(\"example\", tensorFloat(\"'+str(vector)+'\"), 5, 10000) YIELD ?object '+consulta_grafo\n",
+    "result = session.run(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "834841ce-932c-4f0f-9dc0-432ae30acc8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['La señorita  PÉREZ ,   doña Catalina  (Vicepresidenta).- \\nTiene la palabra el diputado  Daniel Manouchehri .  \\n \\nEl señor MANOUCHEHRI.- \\n \\n Señorita Presidenta, “el camino al infierno está cargado de buenas intenciones”. Este dicho popular describe de buena manera el resultado final del proyecto que crea el Servicio de Biodiversidad y Áreas Protegidas (SBAP). \\nEn primer término, este proyecto no protege las áreas silvestres, sino que viene a consolidar la industria en las áreas protegidas. ¿Alguien puede explicar cómo se puede pretender decir que se protegen las áreas si se permite una industria como la salmonera, una industria tóxica que destruye el ecosistema, en los lugares que se dice proteger? \\nEn segundo término, esta es la neoliberalización de nuestras áreas silvestres. Esta iniciativa abre la puerta y consolida la privatización de los parques nacionales con concesiones de hasta 50 años. En tiempos en que los parques nacionales deberían ser lugares abiertos a la comunidad, a los que nuestros niños puedan acceder con facilidad, vamos a abrir la puerta para que los mismos que quieren hacer de todo un negocio hagan de nuestro patrimonio natural un nuevo negociado. Quizá los aquí presentes tendremos el dinero para pagar esas lujosas cabañas a las cuales los hijos de los obreros no podrán acceder. \\nEn tercer lugar, saca a la Conaf de la evaluación de los proyectos y entrega esta función al Ministerio del Medio Ambiente. La Conaf ha sido un pilar fundamental en la conservación de nuestra biodiversidad. Es la Conaf la institución que ha elaborado informes negativos respecto de proyectos destructores del medio ambiente. \\nLo que debemos preguntarnos es por qué los mismos que hace una semana actuaban como negacionistas medioambientales, negando el efecto del hombre en el cambio climático, han sido animosos impulsores de este proyecto. \\nVamos a trabajar para corregir las falencias de este proyecto. Quizás mi voto sea minoritario, pero voy a rechazar esta iniciativa. \\nHe dicho. \\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### Imprimimos solo el tercer resultado\n",
+    "\n",
+    "print(result.values()[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "6ef4e522-74ae-4ff3-81b6-45be81cbc1c3",
    "metadata": {},
@@ -184,14 +234,6 @@
    "source": [
     "session.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6baa4984-a14a-4f03-9be8-2cef99d1cd8d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
